[workspace]
resolver = "2"
members = [
    "crates/*",
]

# This enables optimizations for Cargo dependencies,
# but our own code still remains unoptimized, for
# faster compile times.
[profile.dev.package."*"]
opt-level=3
debug=false
debug-assertions=false
overflow-checks=false
codegen-units=1

[profile.dev.build-override]
opt-level=3
debug=false
debug-assertions=false
overflow-checks=false
codegen-units=1
