[package]
name = "rusted-battalions-engine"
version = "0.1.0"
description = "Game engine for Rusted Battalions"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
thread-safe = []
webgl = ["wgpu/webgl"]
unicode = ["unicode-width", "unicode-segmentation"]

[dependencies]
raw-window-handle = "0.6.2"
static_assertions = "1.1.0"
futures-signals = "0.3.32"
futures = "0.3.28"

# TODO remove this
log = "0.4.20"

[dependencies.unicode-width]
version = "0.2.0"
optional = true

[dependencies.unicode-segmentation]
version = "1.10.1"
optional = true

[dependencies.image]
version = "0.25.5"
default-features = false

[dependencies.bytemuck]
version = "1.13.1"
features = [
    "derive",
]

[dependencies.wgpu]
version = "23.0.0"

[dependencies.wgpu-helpers]
path = "../wgpu-helpers"
