[package]
name = "wgpu-helpers"
version = "0.1.0"
description = "Useful helpers for wgpu"
authors = ["Pauan <pauanyu+github@pm.me>"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
proc-macro2 = "1.0.67"

[dependencies.syn]
version = "2.0.33"

[dev-dependencies]
wgpu = "23.0.0"
